# verte

./: .clang-format  .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  flake.nix  test.vert
.github/workflows/: test.yml
include/excerpt/: errors.hpp  types.hpp
include/excerpt/lexer/: defs.h  lexer.hpp  token.hpp
include/excerpt/parser/: ast.hpp  parser.hpp
include/excerpt/visitors/: base.hpp  pretty.hpp
include/excerpt_utils/: argparser.hpp  logger.hpp
include/verte/: errors.hpp  types.hpp
include/verte/backend/codegen/: codegen.hpp  compiler.hpp
include/verte/frontend/lexer/: defs.h  lexer.hpp  token.hpp
include/verte/frontend/parser/: ast.hpp  parser.hpp
include/verte/frontend/visitors/: base.hpp  pretty.hpp
include/verte/utils/: argparser.hpp  logger.hpp
src/: main.cpp
src/backend/codegen/: codegen.cpp  compiler.cpp
src/frontend/lexer/: lexer.cpp  token.cpp
src/frontend/parser/: ast.cpp  parser.cpp
src/frontend/visitors/: pretty.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: ast.cpp  parser.cpp
src/visitors/: pretty.cpp
tests/: CMakeLists.txt
tests/excerpt/: errors.cpp  types.cpp
tests/excerpt/lexer/: lexer.cpp  token.cpp
tests/excerpt/parser/: ast.cpp  parser.cpp
tests/excerpt/visitors/: base.cpp  concept.cpp  pretty.cpp
tests/excerpt_utils/: logger.cpp
tests/verte/: logger.cpp
